# python-wsq

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  HISTORY.md  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
.travis/: install  run
csrc/: _wsq.c
csrc/commonnbis/include/: util.h
csrc/commonnbis/src/lib/fet/: extrfet.c  lkupfet.c  readfet.c  updatfet.c
csrc/commonnbis/src/lib/ioutil/: filesize.c
csrc/commonnbis/src/lib/util/: ticks.c
wsq/: WsqImagePlugin.py  __init__.py
wsq/tests/: test.wsq  test_wsq.py
