
[metadata]
name = wsq
version = attr: wsq.__version__
author = attr: wsq.__author__
author_email = olivier.heurtier@idemia.com
license = CeCILL-C
description = NBIS/WSQ lib Python wrapper for Pillow
#long_description = file: README.rst, LICENSE
url = https://github.com/idemia/python-wsq
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: CeCILL-C Free Software License Agreement (CECILL-C)

[options]
py_modules = wsq
test_suite = 
    tests
install_requires =
    Pillow
