
[metadata]
name = wsq
version = attr: wsq.__version__
author = attr: wsq.__author__
author_email = olivier.heurtier@idemia.com
license = CeCILL-C
description = NBIS/WSQ lib Python wrapper for Pillow
long_description = file: README.rst
url = https://github.com/idemia/python-wsq
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: CeCILL-C Free Software License Agreement (CECILL-C)

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
test_suite = 
    tests
install_requires =
    Pillow
